pocs/cluster/drone-api/k8s/istio-ingress.yaml
# This example shows the bare minimum needed to get a gateway running. 
# For production usage, additional configuration such as HorizontalPodAutoscaler,
# PodDisruptionBudget, and resource requests/limits are recommended. 
# These are automatically included when using the other gateway installation methods.
apiVersion: v1
kind: Namespace
metadata:
  name: istio-ingress 
  labels:
    istio-injection: enabled
---
apiVersion: v1
kind: Service
metadata:
  name: istio-ingressgateway
  namespace: istio-ingress
spec:
  type: LoadBalancer
  selector:
    istio: ingressgateway
  ports:
  - port: 80
    name: http
  - port: 443
    name: https
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: istio-ingressgateway
  namespace: istio-ingress
spec:
  selector:
    matchLabels:
      istio: ingressgateway
  template:
    metadata:
      annotations:
        # Select the gateway injection template, rather than the default sidecar template.
        inject.istio.io/templates: gateway
      labels:
        # Set a unique label for the gateway. 
        # This is required to ensure Gateways can select this workload.
        istio: ingressgateway
        # Enable gateway injection.
        # If connecting to a revisioned control plane, 
        # replace with "istio.io/rev: revision-name"
        sidecar.istio.io/inject: "true"
    spec:
      # Allow binding to all ports, such as 80 and 443
      securityContext:
        sysctls:
        - name: net.ipv4.ip_unprivileged_port_start
          value: "0"
      containers:
      - name: istio-proxy
        # The image will automatically update each time the pod starts.
        image: auto
        # Drop all privileges, allowing to run as non-root.
        securityContext:
          capabilities:
            drop:
            - ALL
          runAsUser: 1337
          runAsGroup: 1337
